--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,4 @@ code {
     monospace;
 }
 
-a{
-  text-decoration: none !important;
-  color: #fff !important;
-}
-
-a:hover{
-  color: #20c997 !important;
-}
 
